--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.15",
-    "stormpath-sdk-angularjs": "^0.9.0"
+    "ng-flow": "~2",
+    "angular-bootstrap-switch": "^0.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
