--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
   "version": "0.0.0",
   "main": "server/app.js",
   "dependencies": {
+    "angular-ui-bootstrap": "^1.1.2",
     "babel-runtime": "^5.8.20",
     "bluebird": "^2.9.34",
     "body-parser": "^1.13.3",
     "composable-middleware": "^0.3.0",
     "compression": "^1.5.2",
     "connect-mongo": "^0.8.1",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.3.5",
     "ejs": "^2.3.3",
     "errorhandler": "^1.4.2",
     "express": "^4.13.4",
     "express-session": "^1.11.3",
-    "express-stormpath": "^2.3.6",
     "lodash": "^3.10.1",
     "lusca": "^1.3.0",
     "method-override": "^2.3.5",
