--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "devDependencies": {
     "autoprefixer": "^6.0.0",
     "babel-core": "^5.6.4",
+    "babel-preset-es2015": "^6.5.0",
     "chai": "^3.2.0",
     "chai-as-promised": "^5.1.0",
     "chai-things": "^0.2.0",
     "connect-livereload": "^0.5.3",
     "grunt": "~0.4.5",
     "grunt-angular-templates": "^0.5.4",
+    "grunt-babel": "^6.0.0",
     "grunt-build-control": "^0.6.0",
     "grunt-concurrent": "^2.0.1",
     "grunt-contrib-clean": "~0.7.0",
@@ -84,6 +86,7 @@
     "karma-requirejs": "~0.2.2",
     "karma-script-launcher": "~0.1.0",
     "karma-spec-reporter": "~0.0.20",
+    "load-grunt-tasks": "^3.4.0",
     "open": "~0.0.4",
     "phantomjs": "^1.9.18",
     "proxyquire": "^1.0.1",
